<resources>
    <string name="app_name">TesChallengeChp5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="wlcm">wellcome</string>
    <string name="namalengkap">Nama Lengkap</string>
    <string name="tgllahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="usernam">Username</string>
    <string name="SIGNIN">Sign IN</string>
    <string name="SIGNUP">SIGN UP</string>
    <string name="REGIS">Register</string>
    <string name="PSW">Password</string>
    <string name="SGUP">SIGN UP</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="title_movie">Title Movie</string>
    <string name="description_movie">Description Movie</string>
    <string name="_2002_11_09">2002–11-09</string>
    <string name="hm">HOME</string>
    <string name="lgin">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pf">PROFILE</string>
    <string name="updt">Update</string>
    <string name="logouuutt">Logout</string>
    <string name="username">Username</string>
    <string name="mill">Email</string>
    <string name="favorite">Favorite</string>


</resources>